# ML4ME_Textbook

./: .gitignore  .nojekyll  README.md  STUDENT_SETUP.md  _quarto.yml  bootstrap_env.py  environment-gpu.yml  environment.yml  index.html  index.qmd  intro.html  intro.qmd  looking_forward.qmd  pyproject.toml  references.html  search.json  setup.bat  setup.sh
appendices/: course_progression.html  course_progression.qmd  data_preparation.qmd  helpful_tooling.html  helpful_tooling.qmd  review_of_math_and_computing_foundations.ipynb  review_of_singular_value_decomposition.html  review_of_singular_value_decomposition.ipynb
notebooks/: Loss Functions for Linear Models.ipynb  Penalty Functions and Lp Losses Examples.ipynb  autodiff_pytorch_simple_function.ipynb  autodiff_pytorch_simple_nn.ipynb  autodiff_pytorch_simple_optimization.ipynb  autodiff_pytorch_verlet_integrator.ipynb  california_housing_visualization.html  california_housing_visualization.ipynb  cross_validation_linear_regression.html  cross_validation_linear_regression.ipynb  derivative_free_hyper_parameter_optimization.ipynb  loss_functions_for_linear_models.html  loss_functions_for_linear_models.ipynb  notebooks.html  notebooks.qmd  plate_bending.ipynb  polynomial_regression.ipynb  power_electronics_challenge.ipynb  pytorch_autograd_verlet_integrator.html  pytorch_autograd_verlet_integrator.ipynb  supervised_linear_models.html  supervised_linear_models.ipynb
part1/: Singular Value Decompostion.ipynb  cross_validation_linear_regression.ipynb  designing_experiments.qmd  distribution_distance.html  part1.html  (+15 more)
(+45 files in other folders)
